tests/fixtures/invalid/extern_unqualified_call.gcl
// error: extern functions are only callable qualified through their alias
import plugin "graphcal:demo" as demo {
    fn lerp<D>(a: D, b: D, t: Dimensionless) -> D;
}
node x: Dimensionless = lerp(1.0, 2.0, 0.5);
